---
source: crates/die/src/lib.rs
expression: "ec(Die::of_count_base(4, 6), \"prob\", next_state,\n    CountList { queue: &[Keep::Keep, Keep::Keep, Keep::Keep, Keep::Ignore] })"
---
[
    (
        Number(
            4,
        ),
        1/1296,
    ),
    (
        Number(
            5,
        ),
        1/324,
    ),
    (
        Number(
            6,
        ),
        11/1296,
    ),
    (
        Number(
            7,
        ),
        1/54,
    ),
    (
        Number(
            8,
        ),
        11/324,
    ),
    (
        Number(
            9,
        ),
        73/1296,
    ),
    (
        Number(
            10,
        ),
        1/12,
    ),
    (
        Number(
            11,
        ),
        71/648,
    ),
    (
        Number(
            12,
        ),
        169/1296,
    ),
    (
        Number(
            13,
        ),
        91/648,
    ),
    (
        Number(
            14,
        ),
        89/648,
    ),
    (
        Number(
            15,
        ),
        151/1296,
    ),
    (
        Number(
            16,
        ),
        55/648,
    ),
    (
        Number(
            17,
        ),
        11/216,
    ),
    (
        Number(
            18,
        ),
        29/1296,
    ),
    (
        Number(
            19,
        ),
        1/324,
    ),
]

